--- a/src/main/webapp/app/entities/product/product-detail.component.html
+++ b/src/main/webapp/app/entities/product/product-detail.component.html
@@ -43,12 +43,13 @@
                     class="btn btn-info">
                 <fa-icon [icon]="'arrow-left'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.back"> Back</span>
             </button>
-
-            <button type="button"
-                    [routerLink]="['/product', product.id, 'edit']"
-                    class="btn btn-primary">
-                <fa-icon [icon]="'pencil-alt'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.edit"> Edit</span>
+             <span *jhiHasAnyAuthority="'ROLE_ADMIN'">
+                <button type="button"
+                        [routerLink]="['/product', product.id, 'edit']"
+                        class="btn btn-primary">
+                        <fa-icon [icon]="'pencil-alt'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.edit"> Edit</span>
             </button>
+            </span>
         </div>
     </div>
 </div>
