--- a/src/main/webapp/app/entities/invoice/invoice.component.html
+++ b/src/main/webapp/app/entities/invoice/invoice.component.html
@@ -1,12 +1,14 @@
 <div>
     <h2 id="page-heading">
         <span jhiTranslate="storeApp.invoice.home.title">Invoices</span>
+        <span  *jhiHasAnyAuthority="'ROLE_ADMIN'" >
         <button id="jh-create-entity" class="btn btn-primary float-right jh-create-entity create-invoice" [routerLink]="['/invoice/new']">
             <fa-icon [icon]="'plus'"></fa-icon>
             <span  jhiTranslate="storeApp.invoice.home.createLabel">
             Create new Invoice
             </span>
         </button>
+    </span>
     </h2>
     <jhi-alert></jhi-alert>
     <br/>
@@ -49,6 +51,7 @@
                             <fa-icon [icon]="'eye'"></fa-icon>
                             <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
                         </button>
+                        <span  *jhiHasAnyAuthority="'ROLE_ADMIN'" >
                         <button type="submit"
                                 [routerLink]="['/invoice', invoice.id, 'edit']"
                                 class="btn btn-primary btn-sm">
@@ -63,6 +66,7 @@
                             <fa-icon [icon]="'times'"></fa-icon>
                             <span class="d-none d-md-inline" jhiTranslate="entity.action.delete">Delete</span>
                         </button>
+                        </span>
                     </div>
                 </td>
             </tr>
