--- a/src/main/webapp/app/entities/order-item/order-item.component.html
+++ b/src/main/webapp/app/entities/order-item/order-item.component.html
@@ -1,12 +1,14 @@
 <div>
     <h2 id="page-heading">
         <span jhiTranslate="storeApp.orderItem.home.title">Order Items</span>
+        <span  *jhiHasAnyAuthority="'ROLE_ADMIN'" >
         <button id="jh-create-entity" class="btn btn-primary float-right jh-create-entity create-order-item" [routerLink]="['/order-item/new']">
             <fa-icon [icon]="'plus'"></fa-icon>
             <span  jhiTranslate="storeApp.orderItem.home.createLabel">
             Create new Order Item
             </span>
         </button>
+    </span>
     </h2>
     <jhi-alert></jhi-alert>
     <br/>
@@ -47,6 +49,7 @@
                             <fa-icon [icon]="'eye'"></fa-icon>
                             <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
                         </button>
+                        <span  *jhiHasAnyAuthority="'ROLE_ADMIN'" >
                         <button type="submit"
                                 [routerLink]="['/order-item', orderItem.id, 'edit']"
                                 class="btn btn-primary btn-sm">
@@ -61,6 +64,7 @@
                             <fa-icon [icon]="'times'"></fa-icon>
                             <span class="d-none d-md-inline" jhiTranslate="entity.action.delete">Delete</span>
                         </button>
+                    </span>
                     </div>
                 </td>
             </tr>
