--- a/src/main/webapp/app/entities/product-order/product-order.component.html
+++ b/src/main/webapp/app/entities/product-order/product-order.component.html
@@ -1,12 +1,14 @@
 <div>
     <h2 id="page-heading">
         <span jhiTranslate="storeApp.productOrder.home.title">Product Orders</span>
+        <span  *jhiHasAnyAuthority="'ROLE_ADMIN'" >
         <button id="jh-create-entity" class="btn btn-primary float-right jh-create-entity create-product-order" [routerLink]="['/product-order/new']">
             <fa-icon [icon]="'plus'"></fa-icon>
             <span  jhiTranslate="storeApp.productOrder.home.createLabel">
             Create new Product Order
             </span>
         </button>
+        </span>
     </h2>
     <jhi-alert></jhi-alert>
     <br/>
@@ -41,12 +43,14 @@
                             <fa-icon [icon]="'eye'"></fa-icon>
                             <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
                         </button>
+                        <span  *jhiHasAnyAuthority="'ROLE_ADMIN'" >
                         <button type="submit"
                                 [routerLink]="['/product-order', productOrder.id, 'edit']"
                                 class="btn btn-primary btn-sm">
                             <fa-icon [icon]="'pencil-alt'"></fa-icon>
                             <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
                         </button>
+
                         <button type="submit"
                                 [routerLink]="['/', { outlets: { popup: 'product-order/'+ productOrder.id + '/delete'} }]"
                                 replaceUrl="true"
@@ -55,6 +59,7 @@
                             <fa-icon [icon]="'times'"></fa-icon>
                             <span class="d-none d-md-inline" jhiTranslate="entity.action.delete">Delete</span>
                         </button>
+                        </span>
                     </div>
                 </td>
             </tr>
