--- a/src/main/webapp/app/entities/shipment/shipment.component.html
+++ b/src/main/webapp/app/entities/shipment/shipment.component.html
@@ -1,12 +1,14 @@
 <div>
     <h2 id="page-heading">
         <span jhiTranslate="storeApp.shipment.home.title">Shipments</span>
+        <span  *jhiHasAnyAuthority="'ROLE_ADMIN'" >
         <button id="jh-create-entity" class="btn btn-primary float-right jh-create-entity create-shipment" [routerLink]="['/shipment/new']">
             <fa-icon [icon]="'plus'"></fa-icon>
             <span  jhiTranslate="storeApp.shipment.home.createLabel">
             Create new Shipment
             </span>
         </button>
+        </span>
     </h2>
     <jhi-alert></jhi-alert>
     <br/>
@@ -41,6 +43,7 @@
                             <fa-icon [icon]="'eye'"></fa-icon>
                             <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
                         </button>
+                        <span  *jhiHasAnyAuthority="'ROLE_ADMIN'" >
                         <button type="submit"
                                 [routerLink]="['/shipment', shipment.id, 'edit']"
                                 class="btn btn-primary btn-sm">
@@ -55,6 +58,7 @@
                             <fa-icon [icon]="'times'"></fa-icon>
                             <span class="d-none d-md-inline" jhiTranslate="entity.action.delete">Delete</span>
                         </button>
+                        </span>
                     </div>
                 </td>
             </tr>
